# IoTWeatherStation

./: architecture.drawio  concept_design.md  detailed_design.md  package.json  readme.md  sensor-data-uml.xmi  station_config.json  temperature_humidity_node.drawio  weather.db  weather.db-shm  weather.db-wal
config/: config.json
dashboard/: .gitignore  SensorSimulator.py  app.py  start_all.bat  start_api.bat  start_react.bat  start_sensor_simulator.bat
dashboard/dashboard-api/: CsvManager.py  DailyWeather.py  SensorSimulator.py  app.py  database.py  export.py  llm.py  utils.py  weather.db  wind.py
docs/: .$Untitled Diagram.drawio.bkp  .$architecture.drawio.bkp  architecture.drawio  detailed_design.md  temperature_humidity_node.drawio
sensorStation/esp32_sht30/main/: CMakeLists.txt  DummySensor.cpp  DummySensor.h  HttpPostTransmitter.cpp  HttpPostTransmitter.h  I2CMaster.h  I2CSensor.h  ISensor.h  ISensorDataTransmitter.h  SHT30Sensor.cpp  SHT30Sensor.h  SHT30SensorReading.h  SensorReading.h  SensorTask.cpp  SensorTask.h  esp32_sht30.cpp  main.cpp
sensor_nodes/esp32_thp/main/: CMakeLists.txt  HttpPostTransmitter.h  ISensorDataTransmitter.h  SHT30SensorReading.h  SensorTask.h
weather-analysis/: app.py  data.py  import_data.py  tools.py
weather-core/: .env  REST-Project-1-soapui-project.xml  jest.setup.js  package-lock.json  package.json  readme.md  tsconfig.json
web-portal/: README.md  jest.config.cjs  package-lock.json  package.json  vite.config.js
web_portal/: .gitignore  start_api.bat  start_react.bat  start_sensor_simulator.bat
(+110 files in other folders)
